# snake

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  helloworld.cpp
.github/workflows/: buildandtest.yml  clang-format  clang-format.yml  clang-tidy  clang-tidy.yml
gamesrc/: CMakeLists.txt  gamedisplay.cpp  gamedisplay.h  gamewindow.h  sdl.h  snakegame.cpp  try.cpp
snakesrc/: CMakeLists.txt  dequeofunique.h  gamestatus.cpp  gamestatus.h  snakestatus.cpp  snakestatus.h
tests/: a_simple_input.yml  a_simple_input_with_default_body.yml  minic_game_input.yml  test_dequeofunique.cpp  test_snake.cpp  user_input.yml
windowsrc/: CMakeLists.txt  gamewindow.cpp
